# Infinite_runner_game

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Modules/: FindSDL2_ttf.cmake
src/core/: engine.cpp  engine.h  image.cpp  image.h  line.cpp  line.h  point.cpp  point.h  rectangle.cpp  rectangle.h  sdl_helper.h  sprite.cpp  sprite.h
src/game/: inf_run.cpp  inf_run.h  main.cpp
